--- a/MentorBook/Base.lproj/Main.storyboard
+++ b/MentorBook/Base.lproj/Main.storyboard
@@ -40,44 +40,43 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mpa-Ce-Phc">
-                                <rect key="frame" x="370" y="441" width="24" height="53"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XvS-Ei-YuZ">
+                                <rect key="frame" x="87" y="181" width="240" height="244"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1SH-0L-er4">
+                                <rect key="frame" x="20" y="432.5" width="39" height="31"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="" cornerStyle="large">
+                                <buttonConfiguration key="configuration" style="filled" title="前" cornerStyle="large">
+                                    <backgroundConfiguration key="background"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="mae" destination="BYZ-38-t0r" eventType="touchUpInside" id="MtC-SA-m6S"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mpa-Ce-Phc">
+                                <rect key="frame" x="355" y="432.5" width="39" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="次" cornerStyle="large">
                                     <backgroundConfiguration key="background"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="tsugi" destination="BYZ-38-t0r" eventType="touchUpInside" id="s5F-pA-fWZ"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XvS-Ei-YuZ">
-                                <rect key="frame" x="87" y="181" width="240" height="244"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1SH-0L-er4">
-                                <rect key="frame" x="20" y="441" width="24" height="53"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="" cornerStyle="large">
-                                    <backgroundConfiguration key="background"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="mae" destination="BYZ-38-t0r" eventType="touchUpInside" id="yzl-GR-VGe"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mpa-Ce-Phc" secondAttribute="trailing" constant="20" id="6KN-xS-afn"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1SH-0L-er4" secondAttribute="bottom" constant="368" id="Dzr-ED-7JF"/>
+                            <constraint firstItem="1SH-0L-er4" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="3Hp-Es-9vH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mpa-Ce-Phc" secondAttribute="trailing" constant="20" id="6Ca-ra-PyZ"/>
                             <constraint firstItem="1SH-0L-er4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="FcP-FU-8vr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bZk-iW-CcF" secondAttribute="bottom" constant="150" id="SVe-eK-6AZ"/>
                             <constraint firstItem="1SH-0L-er4" firstAttribute="bottom" secondItem="mpa-Ce-Phc" secondAttribute="bottom" id="U1d-Uu-z0p"/>
                             <constraint firstItem="bZk-iW-CcF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Urb-I0-pRt"/>
-                            <constraint firstItem="1SH-0L-er4" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="397" id="ZEg-GO-C9y"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="9aI-PH-W6Z" secondAttribute="trailing" symbolic="YES" id="bue-R7-Y4w"/>
                             <constraint firstItem="bZk-iW-CcF" firstAttribute="top" secondItem="9aI-PH-W6Z" secondAttribute="bottom" constant="69" id="gOG-y7-j6r"/>
-                            <constraint firstItem="mpa-Ce-Phc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1SH-0L-er4" secondAttribute="trailing" symbolic="YES" id="mQN-Mn-lOp"/>
+                            <constraint firstItem="mpa-Ce-Phc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1SH-0L-er4" secondAttribute="trailing" constant="8" symbolic="YES" id="mQN-Mn-lOp"/>
                             <constraint firstItem="bZk-iW-CcF" firstAttribute="leading" secondItem="9aI-PH-W6Z" secondAttribute="leading" id="nWh-pf-eFY"/>
                             <constraint firstItem="1SH-0L-er4" firstAttribute="top" secondItem="mpa-Ce-Phc" secondAttribute="top" id="sbf-G3-EH2"/>
                         </constraints>
